WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205404
[LFC][IFC] LineLayoutContext::m_uncommittedList is not always a continuous list of runs
https://bugs.webkit.org/show_bug.cgi?id=205404
Summary
[LFC][IFC] LineLayoutContext::m_uncommittedList is not always a continuous li...
alan
Reported
2019-12-18 11:04:56 PST
ssia
Attachments
Patch
(16.78 KB, patch)
2019-12-18 11:24 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(16.77 KB, patch)
2019-12-18 12:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-18 11:05:40 PST
<
rdar://problem/58049699
>
alan
Comment 2
2019-12-18 11:24:28 PST
Created
attachment 385988
[details]
Patch
Antti Koivisto
Comment 3
2019-12-18 11:27:34 PST
Comment on
attachment 385988
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385988&action=review
> Source/WebCore/layout/inlineformatting/LineLayoutContext.h:72 > + void shrink(unsigned newSize);
Can we use size_t everywhere?
alan
Comment 4
2019-12-18 12:44:10 PST
Created
attachment 385995
[details]
Patch
WebKit Commit Bot
Comment 5
2019-12-18 13:29:03 PST
Comment on
attachment 385995
[details]
Patch Clearing flags on attachment: 385995 Committed
r253711
: <
https://trac.webkit.org/changeset/253711
>
WebKit Commit Bot
Comment 6
2019-12-18 13:29:05 PST
All reviewed patches have been landed. Closing bug.
alan
Comment 7
2019-12-19 11:20:35 PST
Reverted
r253711
for reason: Broke two tests on Mac and iOS Committed
r253770
: <
https://trac.webkit.org/changeset/253770
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug