Source/WebCore/layout/inlineformatting/InlineLineBreaker.cpp
@@ -54,7 +54,7 @@ static inline bool isContentSplitAllowed(const LineBreaker::Run& run)
     return isTextContentWrappingAllowed(run.inlineItem.style());
 }
 
-static inline bool shouldKeepEndOfLineWhitespace(const LineBreaker::Content& candidateRuns)
+static inline bool shouldKeepEndOfLineWhitespace(const LineBreaker::ContinousContent& candidateRuns)
 {
     // Grab the style and check for white-space property to decided whether we should let this whitespace content overflow the current line.
     // Note that the "keep" in the context means we let the whitespace content sit on the current line.
@@ -64,7 +64,7 @@ static inline bool shouldKeepEndOfLineWhitespace(const LineBreaker::Content& can
     return whitespace == WhiteSpace::Normal || whitespace == WhiteSpace::NoWrap || whitespace == WhiteSpace::PreWrap || whitespace == WhiteSpace::PreLine;
 }
 
-LineBreaker::BreakingContext LineBreaker::breakingContextForInlineContent(const Content& candidateRuns, const LineStatus& lineStatus)
+LineBreaker::BreakingContext LineBreaker::breakingContextForInlineContent(const ContinousContent& candidateRuns, const LineStatus& lineStatus)
 {
     ASSERT(!candidateRuns.isEmpty());
     if (candidateRuns.width() <= lineStatus.availableWidth)
@@ -386,49 +386,42 @@ Optional<size_t> LineBreaker::lastSoftWrapOpportunity(const InlineItem& inlineIt
     return true;
 }
 
-void LineBreaker::Content::append(const InlineItem& inlineItem, InlineLayoutUnit logicalWidth)
+LineBreaker::ContinousContent::ContinousContent(const RunList& runs)
+    : m_runs(runs)
 {
-    ASSERT(!inlineItem.isFloat());
-    m_continousRuns.append({ inlineItem, logicalWidth });
-    m_width += logicalWidth;
     // Figure out the trailing collapsible state.
-    if (inlineItem.isBox() || inlineItem.isLineBreak())
-        m_trailingCollapsibleContent.reset();
-    else if (inlineItem.isText()) {
-        auto& inlineTextItem = downcast<InlineTextItem>(inlineItem);
-        auto isFullyCollapsible = [&] {
-            return inlineTextItem.isWhitespace() && !TextUtil::shouldPreserveTrailingWhitespace(inlineTextItem.style());
-        };
-        if (isFullyCollapsible()) {
-            m_trailingCollapsibleContent.width += logicalWidth;
-            m_trailingCollapsibleContent.isFullyCollapsible = true;
-        } else if (auto collapsibleWidth = inlineTextItem.style().letterSpacing()) {
-            m_trailingCollapsibleContent.width = collapsibleWidth;
-            m_trailingCollapsibleContent.isFullyCollapsible = false;
-        } else
-            m_trailingCollapsibleContent.reset();
+    for (auto& run : WTF::makeReversedRange(m_runs)) {
+        auto& inlineItem = run.inlineItem;
+        if (inlineItem.isBox() || inlineItem.isLineBreak()) {
+            // We did reach a non-collapsible content. We have all the trailing whitespace now.
+            break;
+        }
+        if (inlineItem.isText()) {
+            auto& inlineTextItem = downcast<InlineTextItem>(inlineItem);
+            auto isFullyCollapsible = [&] {
+                return inlineTextItem.isWhitespace() && !TextUtil::shouldPreserveTrailingWhitespace(inlineTextItem.style());
+            };
+            if (isFullyCollapsible()) {
+                m_trailingCollapsibleContent.width += run.logicalWidth;
+                m_trailingCollapsibleContent.isFullyCollapsible = true;
+                // Let's see if we've got more trailing whitespace content.
+                continue;
+            }
+            if (auto collapsibleWidth = inlineTextItem.style().letterSpacing()) {
+                m_trailingCollapsibleContent.width += collapsibleWidth;
+                m_trailingCollapsibleContent.isFullyCollapsible = false;
+            }
+            // End of whitspace content.
+            break;
+        }
     }
 }
 
-void LineBreaker::Content::reset()
-{
-    m_continousRuns.clear();
-    m_trailingCollapsibleContent.reset();
-    m_width = 0_lu;
-}
-
-void LineBreaker::Content::shrink(unsigned newSize)
-{
-    for (auto i = m_continousRuns.size(); i--;)
-        m_width -= m_continousRuns[i].logicalWidth;
-    m_continousRuns.shrink(newSize);
-}
-
-bool LineBreaker::Content::hasTextContentOnly() const
+bool LineBreaker::ContinousContent::hasTextContentOnly() const
 {
     // <span>text</span> is considered a text run even with the [container start][container end] inline items.
     // Due to commit boundary rules, we just need to check the first non-typeless inline item (can't have both [img] and [text])
-    for (auto& run : m_continousRuns) {
+    for (auto& run : m_runs) {
         auto& inlineItem = run.inlineItem;
         if (inlineItem.isContainerStart() || inlineItem.isContainerEnd())
             continue;
@@ -437,12 +430,12 @@ bool LineBreaker::Content::hasTextContentOnly() const
     return false;
 }
 
-bool LineBreaker::Content::isVisuallyEmptyWhitespaceContentOnly() const
+bool LineBreaker::ContinousContent::isVisuallyEmptyWhitespaceContentOnly() const
 {
     // [<span></span> ] [<span> </span>] [ <span style="padding: 0px;"></span>] are all considered visually empty whitespace content.
     // [<span style="border: 1px solid red"></span> ] while this is whitespace content only, it is not considered visually empty.
     // Due to commit boundary rules, we just need to check the first non-typeless inline item (can't have both [img] and [text])
-    for (auto& run : m_continousRuns) {
+    for (auto& run : m_runs) {
         auto& inlineItem = run.inlineItem;
         // FIXME: check for padding border etc.
         if (inlineItem.isContainerStart() || inlineItem.isContainerEnd())
@@ -452,19 +445,19 @@ bool LineBreaker::Content::isVisuallyEmptyWhitespaceContentOnly() const
     return false;
 }
 
-Optional<unsigned> LineBreaker::Content::firstTextRunIndex() const
+Optional<unsigned> LineBreaker::ContinousContent::firstTextRunIndex() const
 {
-    for (size_t index = 0; index < m_continousRuns.size(); ++index) {
-        if (m_continousRuns[index].inlineItem.isText())
+    for (size_t index = 0; index < m_runs.size(); ++index) {
+        if (m_runs[index].inlineItem.isText())
             return index;
     }
     return { };
 }
 
-bool LineBreaker::Content::hasNonContentRunsOnly() const
+bool LineBreaker::ContinousContent::hasNonContentRunsOnly() const
 {
     // <span></span> <- non content runs.
-    for (auto& run : m_continousRuns) {
+    for (auto& run : m_runs) {
         auto& inlineItem = run.inlineItem;
         if (inlineItem.isContainerStart() || inlineItem.isContainerEnd())
             continue;
@@ -473,7 +466,7 @@ bool LineBreaker::Content::hasNonContentRunsOnly() const
     return true;
 }
 
-void LineBreaker::Content::TrailingCollapsibleContent::reset()
+void LineBreaker::ContinousContent::TrailingCollapsibleContent::reset()
 {
     isFullyCollapsible = false;
     width = 0_lu;
